RESOLVED FIXED283002
[GLib] Sprinkle WTF_ALLOW_UNSAFE_BUFFER_USAGE_{BEGIN,END} to fix the build with Clang 19
https://bugs.webkit.org/show_bug.cgi?id=283002
Summary [GLib] Sprinkle WTF_ALLOW_UNSAFE_BUFFER_USAGE_{BEGIN,END} to fix the build wi...
Adrian Perez
Reported 2024-11-12 11:30:24 PST
SSIA.
Attachments
Adrian Perez
Comment 1 2024-11-12 12:01:00 PST
EWS
Comment 2 2024-11-12 13:25:14 PST
Committed 286497@main (268ad18a8768): <https://commits.webkit.org/286497@main> Reviewed commits have been landed. Closing PR #36543 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-12 13:26:14 PST
Note You need to log in before you can comment on or make changes to this bug.