[GLib] Sprinkle WTF_ALLOW_UNSAFE_BUFFER_USAGE_{BEGIN,END} to fix the build with Clang 19 https://bugs.webkit.org/show_bug.cgi?id=283002

Unreviewed. Fix the build for the JSC GLib API with Clang 19.

* Source/JavaScriptCore/API/glib/JSCContext.cpp:
(jsc_context_evaluate_with_source_uri):
(jsc_context_evaluate_in_object):
(jsc_context_check_syntax):
* Source/JavaScriptCore/API/glib/JSCValue.cpp:
(jsc_value_new_string_from_bytes):
* Source/JavaScriptCore/inspector/remote/glib/RemoteInspectorUtils.cpp:
(Inspector::backendCommandsHash):
* Source/WTF/wtf/StringExtras.h:

Canonical link: https://commits.webkit.org/286497@main